[gd_scene load_steps=8 format=3 uid="uid://bmtjdxmss3d0f"]

[ext_resource type="Texture2D" uid="uid://dptenu3w72ivk" path="res://Assets/Sprites/UI_Texture/Button/button_left.PNG" id="1_n4x8u"]
[ext_resource type="Script" path="res://Prefabs/UI Element/Game Themed Button/game_themed_button.gd" id="1_vfjvc"]
[ext_resource type="Texture2D" uid="uid://lvkm4tgd21xs" path="res://Assets/Sprites/UI_Texture/Button/button_middle.PNG" id="2_np2bu"]
[ext_resource type="PackedScene" uid="uid://b2wu8l2hxw6jj" path="res://Prefabs/UI Element/Button/CustomTextureButton.tscn" id="2_uj1o2"]
[ext_resource type="Texture2D" uid="uid://diy0q6ynrd4wn" path="res://Assets/Sprites/UI_Texture/Button/button_right.PNG" id="3_4m1v6"]
[ext_resource type="Theme" uid="uid://bgl2wkcdj1wgv" path="res://Prefabs/UI Element/Themes/CustomTheme.tres" id="4_kmfen"]
[ext_resource type="FontFile" uid="uid://cif4hscevimd6" path="res://Assets/Fonts/Dwarven-Stonecraft 英文图鉴标题与墓碑.ttf" id="5_mjfi8"]

[node name="Game Themed Button" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 40.0
script = ExtResource("1_vfjvc")

[node name="Textures" type="Control" parent="."]
z_index = -3
anchors_preset = 0
offset_right = 126.0
offset_bottom = 46.0

[node name="Left" type="TextureRect" parent="Textures"]
z_index = -3
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_n4x8u")

[node name="Mid" type="TextureRect" parent="Textures"]
z_index = -3
layout_mode = 0
offset_left = 40.0
offset_right = 86.0
offset_bottom = 46.0
texture = ExtResource("2_np2bu")

[node name="Right" type="TextureRect" parent="Textures"]
z_index = -3
layout_mode = 0
offset_left = 86.0
offset_right = 126.0
offset_bottom = 46.0
texture = ExtResource("3_4m1v6")

[node name="Button Text" type="Label" parent="."]
z_index = -3
layout_mode = 0
offset_right = 120.0
offset_bottom = 40.0
theme = ExtResource("4_kmfen")
theme_override_colors/font_color = Color(0, 0.768627, 0, 1)
theme_override_colors/font_shadow_color = Color(0.188235, 0.188235, 0.254902, 1)
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_offset_y = -1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("5_mjfi8")
theme_override_font_sizes/font_size = 22
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Active Button" parent="." instance=ExtResource("2_uj1o2")]
z_index = 5
layout_mode = 0
offset_right = 122.0
offset_bottom = 42.0
hover_audio = null
pressed_position_delta = Vector2(0, 0)

[connection signal="button_down" from="Active Button" to="." method="on_button_down"]
[connection signal="button_up" from="Active Button" to="." method="on_button_up"]
[connection signal="pressed" from="Active Button" to="." method="on_active_button_pressed"]
